--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.2.5",
     "@mui/styles": "^5.2.3",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react-bootstrap": "^2.0.3",
+    "antd": "^4.21.2",
     "bootstrap": "^5.2.0",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,5 +54,4 @@
     ]
   },
   "proxy": "http://localhost:8081"
- 
 }
